# BLOG_GENERATION_AGENT

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  Explore.ipynb  GCP_DEPLOYMENT_PRODUCTION.MD  GCP_DEPLOYMENT_STEPS_ADHOC.MD  Makefile  README.md  compose.yaml  deploy.ps1  firebase.json  fly.toml  new_image_deploy.ps1  package-lock.json  pyproject.toml  requirements.txt
api/: app.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  main.ts  types.ts
frontend/src/components/: InputPanel.ts  ProgressStream.ts  ResultPanel.ts  Sidebar.ts  Toast.ts
frontend/src/styles/: main.css
my-terraform/: main.tf  outputs.tf  variables.tf
src/core/: conditionals.py  main_graph.py  nodes.py  pydantic_models.py  reducer_subgraph.py  state.py  utils.py
