[project]
name = "ai-blog-generator"
author = "Mrinmoy Bhuyan"
version = "0.1.0"
description = "AI Powered Blog Generation using LangGraph"
requires-python = ">=3.12"

dependencies = [
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "fastmcp>=3.1.1",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-astradb>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.19",
    "langsmith>=0.7.22",
    "psycopg[binary]>=3.3.3",
    "pypdf>=6.9.1",
    "streamlit>=1.55.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]


